--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build --prod && cp -r build ../../part3/phonebook-backend/",
-    "deploy": "cd ../../ && git subtree push --prefix part3/phonebook-backend heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "deploy": "git subtree push --prefix part3/phonebook-backend heroku master",
+    "deploy:full": "npm run build:ui && cd ../../ && git add part2 part3 && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "Inci Qasimova",
