--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build --prod && cp -r build ../../part3/phonebook-backend/",
     "deploy": "cd ../../ && git push --prefix part3/phonebook-backend heroku master",
-    "deploy:full": "npm run build:ui && cd ../../ && git add part2 part3 && git commit -m uibuild && npm run deploy",
+    "deploy:full": "npm run build:ui && cd ../../ && git add part2 part3 && git commit -m uibuild && cd part3/phonebook-backend && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "Inci Qasimova",
