--- a/examples/backend/package.json
+++ b/examples/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "build:ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
@@ -21,6 +22,7 @@
     "mongoose": "^5.11.7"
   },
   "devDependencies": {
+    "eslint": "^7.17.0",
     "nodemon": "^2.0.6"
   }
 }
