--- a/examples/backend/package.json
+++ b/examples/backend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "build:ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "test": "jest --verbose"
   },
   "author": "Inci Qasimova",
   "license": "MIT",
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "eslint": "^7.17.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
