--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose",
+    "lint": "eslint ."
   },
   "author": "Inci Qasimova",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "mongoose": "^5.11.13"
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7"
   }
 }
