--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
+    "lodash": "^4.17.20",
     "nodemon": "^2.0.7"
   }
 }
