--- a/examples/backend/package.json
+++ b/examples/backend/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "build:ui": "rm -rf build && cd ../notes && npm run build && cp -r build ../backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Inci Qasimova",
   "license": "MIT",
@@ -22,9 +22,11 @@
     "mongoose": "^5.11.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.17.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.1.3"
   },
   "jest": {
     "testEnvironment": "node"
